test/inference/bad/typeclass_use_rw.mle
class RW 'a { read : unit -> 'a; write : 'a -> unit }
let (r : unit) = write['_a] (read['_a] ())